<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_person_title"
        android:textSize="32sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/e3_name" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/e3_sex" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/e3_age" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/e3_studentid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/e3_button_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/app_button_cancel"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/e3_button_confirm"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/app_button_confirm"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>



</LinearLayout>